refactor: upadte project name

--- a/dev/popup-dev.html
+++ b/dev/popup-dev.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fast Bearer - Development Popup</title>
+  <title>WhatsMyToken - Development Popup</title>
   <style>
     body {
       margin: 0;
